# aioweb3

./: .style.yapf  Makefile  README.md  pyproject.toml
src/aioweb3/: __init__.py  async_eth.py  async_web3.py  contract.py  exceptions.py  manager.py  middleware.py  provider.py
tests/: test_contract.py  test_single.py  test_worker_pool.py
tests/fixtures/: addresses.csv
