[tool.poetry]
name = "aioweb3"
version = "0.1.0"
description = "asyncio web3 provider"
authors = ["Omar Bohsali <omar.bohsali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "5.24.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
